# starfield-items-alfred

./: README.md  info.plist  pyproject.toml  starfield.py  starfield_items.csv
