[project]
name = "starfield-items-alfred"
version = "0.1.0"
description = "Starfield item ID search for Alfred"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
